<resources>
    <string name="app_name">Local Event Hub</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_wait">Please wait…</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="create_post">Create Post</string>
    <string name="edit">Edit</string>
    <string name="profile_update">Profile Update</string>
    <string name="update">Update</string>
    <string name="google_map_api_key">AIzaSyAoHXNlct7AHCY0d7YgMvavHQanhkYX8PQ</string>
    <string name="post_empty_message">There is no post yet!</string>
    <string name="attach_post_image">Attach Post Image</string>
    <string name="post_title">Post Title</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="hint_comma_seperate">Hint (comma seperate)</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="comments">comments</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="notification_empty_message">There is no notification yet!</string>
    <string name="ai_tags_and_categories_suggestion">AI Tags and Categories Suggestion</string>
</resources>