<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.activities.CreatePostActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


       <com.google.android.material.appbar.AppBarLayout
           android:id="@+id/app_bar_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/primary"
           android:elevation="4dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <androidx.appcompat.widget.Toolbar
               android:id="@+id/toolbar"
               android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"
               android:gravity="center_vertical"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />
       </com.google.android.material.appbar.AppBarLayout>

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
           android:padding="@dimen/smallPadding"
           android:layout_margin="@dimen/defaultDpMargin"
           >

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:background="@drawable/rounded_grey_bg"
               >

               <androidx.appcompat.widget.AppCompatImageView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:scaleType="fitCenter"
                   android:id="@+id/post_image"
                   />

               <androidx.appcompat.widget.LinearLayoutCompat
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:id="@+id/upload_image_wrapper"
                   >
                   <androidx.appcompat.widget.AppCompatImageView
                       android:layout_width="48dp"
                       android:layout_height="48dp"
                       android:src="@drawable/ic_camera_alt"
                       android:id="@+id/upload_post_image_btn"
                       />
                   <com.google.android.material.textview.MaterialTextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="@dimen/eightDpMargin"
                       android:text="@string/attach_post_image"
                       />
               </androidx.appcompat.widget.LinearLayoutCompat>
           </FrameLayout>

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/description"
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:background="@drawable/text_input_box_design"
               android:layout_marginTop="@dimen/sixtyDpMargin"
               android:gravity="start"
               android:hint="@string/description"
               android:inputType="textMultiLine"
               android:textColor="@color/black"
               android:textColorHint="@color/black"
               android:textSize="@dimen/mediumTextSize" />

           <com.google.android.material.textview.MaterialTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/sixtyDpMargin"
               android:text="@string/hint_comma_seperate"
               android:textColor="@color/red"
               />
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/tags"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/text_input_box_design"
               android:layout_marginTop="@dimen/defaultDpMargin"
               android:hint="@string/tags"
               android:inputType="text"
               android:textColor="@color/black"
               android:imeOptions="actionDone"
               android:textColorHint="@color/black"
               android:textSize="@dimen/mediumTextSize" />

           <com.google.android.material.textview.MaterialTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/sixtyDpMargin"
               android:text="@string/location"
               android:textColor="@color/black"
               android:textStyle="bold"
               />
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/location"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/text_input_box_design"
               android:layout_marginTop="@dimen/defaultDpMargin"
               android:hint="@string/location"
               android:focusableInTouchMode="false"
               android:inputType="text"
               android:textColor="@color/black"
               android:textColorHint="@color/black"
               android:textSize="@dimen/mediumTextSize" />

           <com.google.android.material.button.MaterialButton
               android:id="@+id/save_btn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/thirtyTwoDpMargin"
               android:text="@string/save"
               android:textSize="@dimen/largeTextSize"
               app:backgroundTint="@color/primary" />
       </androidx.appcompat.widget.LinearLayoutCompat>


   </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>